--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
     "express-handlebars": "^3.0.0",
     "method-override": "^2.3.7",
     "mysql": "^2.12.0"
+  },
+  "engines":{
+    "node": "6.5.0"
   }
+
 }
